Fix issue where opaque covers screen oddly
Had a container class on body vs a div.  Then made div height 100vh
Fixes

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -11,6 +11,7 @@ header {
 .container {
   background-image: url("http://wallpapercave.com/wp/JzfvVHJ.jpg");
   background-position: bottom;
+  height: 100vh;
   padding: 0;
   width: 100%;
 }
